...
  "aktionariatTermsOfService": "Nutzungsbedingungen",
  "aktionariatText": "Die RealUnit Schweiz AG hat die Aktionariat AG mit der Führung des Aktienbuchs beauftragt. Im Rahmen dieses Prozesses werden Ihre persönlichen Daten an die Aktionariat AG übermittelt. Sie erhalten dort ein eigenes Nutzerkonto, das zur Verwaltung Ihrer Aktionärsdaten dient.\n\nBitte lesen und bestätigen Sie die folgenden Dokumente der Aktionariat AG:",
  "aktionariatTitle": "Dokumente der Aktionariat AG",
  "amountIn": "Betrag in",
  "authenticate": "Authentifizieren",
...
  "connectedBitboxContent": "Bitte bestätigen Sie und folgen nun den letzten Anweisungen auf Ihrer BitBox.",
  "connectedBitboxTitle": "Verbindung erfolgreich",
  "contact": "Kontakt",
  "contactFaq": "FAQ",
  "contactFaqDescription": "Häufige Fragen",
...
  "createWallet": "Neue Wallet erstellen",
  "createWalletConfirm": "Ich habe es gesichert",
  "createWalletRecoveryKeyTitle": "Wiederherstellungs-Wörter",
  "createWalletSubtitle": "Notieren Sie Ihre Wiederherstellungs-Wörter auf einem Blatt Papier auf und verwahren Sie dieses sicher und vertraulich. Jede Person, die im Besitz dieser 12 Wörter ist, kann auf Ihr Wallet zugreifen! Daher raten wir von einer Speicherung auf Ihrem Mobiltelefon oder Laptop dringend ab.",
  "createWalletTitle": "Wallet-Sicherung",
...
  "realunitStockToken": "RealUnit Aktientoken",
  "realunitWallet": "RealUnit Wallet",
  "realunitWalletLogout": "RealUnit Wallet zurücksetzen",
  "realunitWalletLogoutCheck": "Ich habe meine Wiederherstellungsphrase gesichert.",
  "realunitWalletLogoutSubtitle": "Sie können die Wallet zurücksetzen, nachdem Sie bestätigt haben, dass Sie Ihre Wiederherstellungsphrase sicher gespeichert haben.",
...
  "registrationRequiredDescription": "Um RealUnit Aktientoken zu kaufen, benötigen wir noch einige Daten von Ihnen.",
  "removeTaxResidence": "Entfernen",
  "reset": "Zurücksetzen",
  "residence": "Residenz",
  "restoreWallet": "Wallet wiederherstellen",
...
  "sendSuccess": "Überweisung gesendet",
  "setNationalityFailed": "Ihre Staatsangehörigkeit konnte nicht gesetzt werden:\n${message}",
  "settings": "Einstellungen",
  "settingsAppVersion": "Version ${tag}",
  "settingsBiometricUnlock": "Mit Biometrie entsperren",
...
  "settingsCurrencyLoadFailed": "Währungsliste konnte nicht geladen werden",
  "settingsCurrencyLoadFailedDescription": "Bitte überprüfen Sie Ihre Internetverbindung und versuchen Sie es erneut.",
  "settingsDeleteWallet": "Wallet zurücksetzen",
  "settingsHardwareWallet": "Hardware-Wallet",
  "settingsInsiderBonus": "Bonus-Programm",
...
  "softwareWallet": "Software-Wallet (App)",
  "softwareWalletSubtitle": "Ich möchte eine neue Wallet erstellen oder meine bestehende Wallet (z.B. Aktionariat) wiederherstellen.",
  "start": "Start",
  "startDate": "Anfangsdatum",
  "startupFailureActionFailed": "Das hat nicht funktioniert. Bitte versuchen Sie es erneut.",
...
  "verifySeedTitle": "Sicherung überprüfen",
  "verifySeedWordLabel": "Wort ${position}",
  "walletAddress": "Wallet-Adresse",
  "walletAddressDisclaimer": "Senden Sie an diese Adresse nur REALU. Andere Token werden in der App nicht angezeigt.",
  "walletSwitcherBitbox": "BitBox",
...
