...
                    curve: Curves.easeInOut,
                    offset: showSecondStep ? const Offset(-1.2, 0) : .zero,
                    child: Column(
                      spacing: 16.0,
                      children: [
                        Semantics(
                          identifier: 'welcome-software-wallet',
                          child: WelcomeCard(
                            title: S.of(context).softwareWallet,
                            description: S.of(context).softwareWalletSubtitle,
                            onPressed: () => setState(() => showSecondStep = true),
                            trailing: SvgPicture.asset(
                              'assets/images/illustrations/software_wallet.svg',
...
                            trailing: SvgPicture.asset(
                              'assets/images/illustrations/create_wallet.svg',
                            ),
                          ),
                        ),
                        Semantics(
                          identifier: 'welcome-restore-wallet',
                          child: WelcomeCard(
                            title: S.of(context).restoreWallet,
                            description: S.of(context).restoreWalletSubtitle,
                            onPressed: () => context.pushNamed(OnboardingRoutes.restoreWallet),
                            trailing: SvgPicture.asset(
                              'assets/images/illustrations/restore_wallet.svg',
...
